[gd_scene load_steps=36 format=2]

[ext_resource path="res://chao/chao.tres" type="TileSet" id=1]
[ext_resource path="res://cenas_node/hospital.gd" type="Script" id=2]
[ext_resource path="res://fase_ensinomedio/Cenario/spacebar.png" type="Texture" id=3]
[ext_resource path="res://chao/floor.png" type="Texture" id=4]
[ext_resource path="res://fase_hospital/cenario/2.png" type="Texture" id=5]
[ext_resource path="res://fase_hospital/cenario/Iconecartaz4.png" type="Texture" id=6]
[ext_resource path="res://fase_hospital/vitor/vitor3.png" type="Texture" id=7]
[ext_resource path="res://fase_hospital/vitor/vitor1.png" type="Texture" id=8]
[ext_resource path="res://fase_hospital/vitor/vitor4.png" type="Texture" id=9]
[ext_resource path="res://fase_hospital/vitor/vitor5.png" type="Texture" id=10]
[ext_resource path="res://fase_hospital/vitor/vitor2.png" type="Texture" id=11]
[ext_resource path="res://fase_hospital/piano-moment-9835.mp3" type="AudioStream" id=12]
[ext_resource path="res://fase_hospital/cenario/botao-x (1).png" type="Texture" id=13]
[ext_resource path="res://fase_hospital/cenario/Iconecartaz3.png" type="Texture" id=14]
[ext_resource path="res://fase_hospital/cenario/3.png" type="Texture" id=15]
[ext_resource path="res://fase_hospital/cenario/cenario_hospital1.png" type="Texture" id=16]
[ext_resource path="res://fase_hospital/cenario/Iconecartaz1.png" type="Texture" id=17]
[ext_resource path="res://fase_hospital/cenario/espelho.png" type="Texture" id=18]
[ext_resource path="res://Slide1-removebg-preview (1).png" type="Texture" id=19]
[ext_resource path="res://fase_hospital/cenario/4.png" type="Texture" id=20]
[ext_resource path="res://cenas_node/pensamento_hospital.gd" type="Script" id=21]
[ext_resource path="res://cenas_node/trasicao_portal.gd" type="Script" id=22]
[ext_resource path="res://fase_hospital/cena_hospital_portal.gd" type="Script" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52, 322.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 26.25, 315 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 66.0
height = 206.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "walking",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 66.875, 205.25 )

[sub_resource type="Animation" id=10]
resource_name = "barra"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("barra:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.36 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 691.781, 79.625 ), Vector2( 691.781, 80.8 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 33, 45.5 )

[sub_resource type="Animation" id=11]
resource_name = "cartaz1"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("cartaz1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 472, 355 ), Vector2( 472, 358 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 33.5, 45.5 )

[sub_resource type="Animation" id=12]
resource_name = "cartaz2"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("cartaz2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 643, 355 ), Vector2( 643, 358 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 33, 45 )

[sub_resource type="Animation" id=13]
resource_name = "cartaz3"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("cartaz3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 799, 355 ), Vector2( 799, 358 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 23 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 756, 379 )
scale = Vector2( 0.894674, 0.891429 )
texture = ExtResource( 16 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 1, 0.972549, 0.972549, 1 )
show_behind_parent = true
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 786430, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0 )

[node name="wall1" type="StaticBody2D" parent="."]
position = Vector2( -7, 19 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall1"]
position = Vector2( -42, 312.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="wall1"]
position = Vector2( -45, 303 )
scale = Vector2( 0.53125, 10.4688 )
texture = ExtResource( 4 )

[node name="wall2" type="StaticBody2D" parent="."]
position = Vector2( 1606, 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2"]
position = Vector2( -42, 312.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="wall2"]
position = Vector2( -45, 303 )
scale = Vector2( 0.53125, 10.4688 )
texture = ExtResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall2"]
position = Vector2( -122.75, 312 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 53, 79 )
script = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 52, 409 )
rotation = -0.120216
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 121, 418 )
rotation = -0.0400758
scale = Vector2( 0.644538, 0.643892 )
texture = ExtResource( 18 )

[node name="musica_hospital" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -15.0
autoplay = true

[node name="cartazgrande1" type="Sprite" parent="."]
visible = false
position = Vector2( 387.025, 473.375 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="butaosair1" type="Button" parent="."]
visible = false
margin_left = 273.025
margin_top = 609.375
margin_right = 797.025
margin_bottom = 1127.38
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 13 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Butaocartaz1" type="Button" parent="."]
margin_left = 433.0
margin_top = 310.0
margin_right = 503.0
margin_bottom = 409.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="cartazgrande2" type="Sprite" parent="."]
visible = false
position = Vector2( 639.025, 472.375 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="butaosair2" type="Button" parent="."]
visible = false
margin_left = 525.025
margin_top = 612.375
margin_right = 1049.03
margin_bottom = 1130.38
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 13 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Butaocartaz2" type="Button" parent="."]
margin_left = 610.0
margin_top = 308.0
margin_right = 678.0
margin_bottom = 403.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="cartazgrande3" type="Sprite" parent="."]
visible = false
position = Vector2( 590, 469 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 20 )

[node name="butaosair3" type="Button" parent="."]
visible = false
margin_left = 679.0
margin_top = 606.0
margin_right = 1203.0
margin_bottom = 1124.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 13 )
flat = true

[node name="Butaocartaz3" type="Button" parent="."]
margin_left = 762.0
margin_top = 308.0
margin_right = 835.0
margin_bottom = 404.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 719, 74 )
z_index = 3
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 493, 418 )
scale = Vector2( 0.527308, 0.451219 )
frames = SubResource( 2 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 501, 425.75 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( 293, 308 )
current = true
limit_left = 0
limit_right = 1500
limit_bottom = 690

[node name="Control" type="Control" parent="KinematicBody2D"]
visible = false
margin_left = -245.0
margin_top = 57.0
margin_right = -55.0
margin_bottom = 149.0
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Control"]
position = Vector2( 432, 128 )
scale = Vector2( 1.03303, 0.837498 )
texture = ExtResource( 19 )

[node name="RichTextLabel" type="RichTextLabel" parent="KinematicBody2D/Control"]
anchor_left = 0.168421
anchor_top = -0.0869565
anchor_right = 1.02632
anchor_bottom = 0.0434783
margin_left = 102.0
margin_top = 24.0
margin_right = 404.0
margin_bottom = 64.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/default_color = Color( 0.160784, 0.52549, 0.560784, 1 )
custom_colors/selection_color = Color( 0.160784, 0.52549, 0.560784, 1 )
custom_colors/font_color_selected = Color( 0.160784, 0.52549, 0.560784, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="KinematicBody2D/Control"]

[node name="barra" type="Sprite" parent="KinematicBody2D/Control"]
modulate = Color( 0.211765, 0.623529, 0.654902, 1 )
position = Vector2( 691.781, 80.7674 )
scale = Vector2( 0.162799, 0.154464 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D/Control"]
autoplay = "barra"
anims/barra = SubResource( 10 )

[node name="cartaz1" type="Area2D" parent="."]
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="cartaz1" type="Sprite" parent="cartaz1"]
position = Vector2( 472, 359 )
scale = Vector2( 0.042, 0.042 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cartaz1"]
position = Vector2( 472, 358.5 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="cartaz1"]
autoplay = "cartaz1"
anims/cartaz1 = SubResource( 11 )

[node name="cartaz2" type="Area2D" parent="."]
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="cartaz2" type="Sprite" parent="cartaz2"]
position = Vector2( 643, 359 )
scale = Vector2( 0.042, 0.042 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="cartaz2"]
position = Vector2( 640.5, 356.5 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="cartaz2"]
autoplay = "cartaz2"
anims/cartaz2 = SubResource( 12 )

[node name="cartaz3" type="Area2D" parent="."]
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="cartaz3" type="Sprite" parent="cartaz3"]
position = Vector2( 799, 357 )
scale = Vector2( 0.042, 0.042 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cartaz3"]
position = Vector2( 799, 355 )
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="cartaz3"]
autoplay = "cartaz3"
anims/cartaz3 = SubResource( 13 )

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="pressed" from="butaosair1" to="." method="_on_butaosair1_pressed"]
[connection signal="pressed" from="Butaocartaz1" to="." method="_on_Butaocartaz1_pressed"]
[connection signal="pressed" from="butaosair2" to="." method="_on_butaosair2_pressed"]
[connection signal="pressed" from="Butaocartaz2" to="." method="_on_Butaocartaz2_pressed"]
[connection signal="pressed" from="butaosair3" to="." method="_on_butaosair3_pressed"]
[connection signal="pressed" from="Butaocartaz3" to="." method="_on_Butaocartaz3_pressed"]
[connection signal="tween_all_completed" from="KinematicBody2D/Control/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="cartaz1" to="." method="_on_cartaz4_body_entered"]
[connection signal="body_exited" from="cartaz1" to="." method="_on_cartaz1_body_exited"]
[connection signal="body_entered" from="cartaz2" to="." method="_on_cartaz2_body_entered"]
[connection signal="body_exited" from="cartaz2" to="." method="_on_cartaz2_body_exited"]
[connection signal="body_entered" from="cartaz3" to="." method="_on_cartaz3_body_entered"]
[connection signal="body_exited" from="cartaz3" to="." method="_on_cartaz3_body_exited"]
